feat: add two new assert for all entity